# jzp

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
src/jzp/: __init__.py  cli.py  header.py
