[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jzp"
description = "A libary for dealing with the compression and decompression of Agilent JZP files."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
maintainers = [{name = "Antonio Vázquez", email = "antoniovazquezblanco@gmail.com"}]
authors = [{name = "Antonio Vázquez", email = "antoniovazquezblanco@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dependencies = [
    "lzsslib>=0.0.2",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/antoniovazquezblanco/jzp/"
"Issue Tracker" = "https://github.com/antoniovazquezblanco/jzp/issues"

[project.scripts]
jzp = "jzp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jzp"]

[tool.hatch.version]
source = "vcs"
